--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,1 +1,15 @@
-<div class="here"></div>
+<div class="gv-maps-wrapper">
+        <div class="scale">
+                <div class="scale__title">Percentage of accounts without electricity</div>
+                <div class="scale__section" data-label="100%" style="background-color: #850000"></div>
+                <div class="scale__section" data-label="80 > 99" style="background-color: #b51800"></div>
+                <div class="scale__section" data-label="60-80" style="background-color: #ff9b0b"></div>
+                <div class="scale__section" data-label="40-60%" style="background-color: #ffce4b"></div>
+                <div class="scale__section" data-label="20-40" style="background-color: #ffffaf"></div>
+                <div class="scale__section" data-label="&lt; 20%" style="background-color:lightgrey"></div>
+<div class="gv-map1"><div class="gv-map"><h3 class="gv-date">Sep 10</h3></div></div>
+<div class="gv-map2"><div class="gv-map"><h3 class="gv-date">Sep 11</h3></div></div>
+<div class="gv-map3"><div class="gv-map"><h3 class="gv-date">Sep 12</h3></div></div>
+<div class="gv-map4"><div class="gv-map"><h3 class="gv-date">Sep 13</h3></div></div>
+</div>
+<div class="gv-source">Source: Florida Division of Emergency Management</div>
