--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,14 +2,148 @@
 @import "fonts";
 
 // Uncomment for embeds
-//@import "embed";
+@import "embed";
 
 // Uncomment for full screen (including immersive article main media)
 //@import "fullscreen";
 
+$band5: #850000;
+$band4: #bd0026;
+$band3: #f03b20;
+$band2: #fd8d3c;
+$band1: #fecc5c;
+$band0: lightgrey;
+
+
 .element-atom,
 .interactive-atom {
     margin: 0 !important;
+    height: 100%;
+    width: 100%;
+
+   
 }
 
-@import "../components/interactive-google-map/styles"
+.gv-source {
+    @include fs-data(2);
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: #666;
+}
+
+.gv-date {
+    @include fs-headline(1);
+    font-variant: small-caps;
+}
+
+.gv-maps-wrapper {
+    width: 100%;
+    height:100%;
+
+//    display: flex;
+//    flex-flow: row wrap;
+}
+
+.gv-map{
+    display: inline-block;
+    float: left;
+    min-height: 300px;
+    width:25%;
+    @media (max-width:700px) {
+        width: 50%;
+    }
+    @media (max-width:350px) {
+        width: 100%;
+    }
+}
+
+.gv-map > svg {
+    height: 100%;
+    width: 100%;
+}
+
+.gv-map path {
+    fill: grey;   
+}
+
+
+.gv-map1 path[data-sep10='5'], .gv-map2 path[data-sep11='5'], .gv-map3 path[data-sep12='5'], .gv-map4 path[data-sep13='5'] {
+    fill: $band5;  
+  }
+
+  .gv-map1 path[data-sep10='4'], .gv-map2 path[data-sep11='4'], .gv-map3 path[data-sep12='4'], .gv-map4 path[data-sep13='4'] {
+    fill: $band4;  
+  }
+
+  .gv-map1 path[data-sep10='3'], .gv-map2 path[data-sep11='3'], .gv-map3 path[data-sep12='3'], .gv-map4 path[data-sep13='3'] {
+    fill: $band3;  
+  }
+
+  .gv-map1 path[data-sep10='2'], .gv-map2 path[data-sep11='2'], .gv-map3 path[data-sep12='2'], .gv-map4 path[data-sep13='2'] {
+    fill: $band2;  
+  }
+
+  .gv-map1 path[data-sep10='1'], .gv-map2 path[data-sep11='1'], .gv-map3 path[data-sep12='1'], .gv-map4 path[data-sep13='1'] {
+    fill: $band1;  
+  }
+
+  .gv-map1 path[data-sep10='0'], .gv-map2 path[data-sep11='0'], .gv-map3 path[data-sep12='0'], .gv-map4 path[data-sep13='0'] {
+    fill: $band0;  
+  }
+
+
+
+.scale {
+    padding-bottom: 6px;
+    padding-left: 10px;
+}
+
+.scale__section {
+    height: 12px;
+    width: 12px;
+    display: inline-block;
+    margin-right: 70px;
+    border-radius: 40px;
+    box-sizing: border-box;
+    line-height: 0; // opacity: 0.75;
+    &::before {
+        content: attr(data-label);
+        @include fs-textSans(2);
+        padding-left: 18px; // margin-top: -6px;
+        // width: 80px;
+        margin-top: 1px;
+        // font-weight: bold;
+        color: #767676;
+        white-space: nowrap; // display: block;
+    }
+}
+
+.scale__title {
+    @include fs-textSans(3);
+    line-height: 18px;
+    display: block;
+    margin-bottom: 2px;
+
+    @include mq(mobileLandscape) {
+        margin-bottom: -1px;
+    }
+
+    font-weight: bold;
+}
+
+
+
+.scale__text {
+    @include fs-textSans(3);
+    line-height: 18px;
+    display: block;
+    margin-bottom: 2px;
+
+    @include mq(mobileLandscape) {
+        margin-bottom: -1px;
+    }
+
+    font-weight: bold;
+    color: #767676;
+    display: none;
+}
